# 2425-11-b-pp-student-practices-assignment-KKGaydov21

./: .env  .replit  README.md  auth.py  dependencies.txt  main.py  pyproject.toml  requirements.txt
KKGaydov21/CancerRiskChecker/: app.py  auth.py  forms.py  main.py  ml_model.py  models.py  pyproject.toml  routes.py
KKGaydov21/CancerRiskChecker/app/: __init__.py
KKGaydov21/CancerRiskChecker/attached_assets/: README_1751874110886.md  _1751874110884.env  _1751874110884.replit  auth_1751874110885.py  dependencies_1751874110885.txt  main_1751874110885.py  mydatabase_1751874110885.db  pyproject_1751874110886.toml  requirements_1751874110886.txt
KKGaydov21/CancerRiskChecker/blueprints/: admin.py  api.py  assessment.py  auth.py  dashboard.py  main.py
KKGaydov21/CancerRiskChecker/config/: settings.py
KKGaydov21/CancerRiskChecker/forms/: assessment_forms.py  auth_forms.py
KKGaydov21/CancerRiskChecker/models/: __init__.py  assessment.py  user.py
KKGaydov21/CancerRiskChecker/static/css/: style.css
KKGaydov21/CancerRiskChecker/static/js/: main.js
KKGaydov21/CancerRiskChecker/templates/: assessment.html  base.html  dashboard.html  index.html  login.html  register.html  result.html
KKGaydov21/CancerRiskChecker/templates/admin/: assessments.html  create_admin.html  dashboard.html  user_detail.html  users.html
KKGaydov21/CancerRiskChecker/templates/assessment/: form.html  history.html  result.html
KKGaydov21/CancerRiskChecker/templates/auth/: login.html  register.html
KKGaydov21/CancerRiskChecker/utils/: admin_setup.py  helpers.py  ml_engine.py  validators.py
(+45 files in other folders)
