[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "seaborn>=0.13.2",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
    "wtforms>=3.2.1",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "matplotlib>=3.10.3",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
